# kodapa-2

./: .gitignore  Cargo.toml  register_commands.py
config/: env.py
src/: agenda.rs  calendar.rs  discord.rs  error.rs  kodapa.rs  main.rs
src/calendar/: model.rs
src/calendar/model/: events.rs
