[package]
name = "kodapa-2"
version = "0.0.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper-tls = "0.5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
twilight-cache-inmemory = "0.5"
twilight-gateway = "0.5"
twilight-http = "0.5"
twilight-model = "0.5"
yup-oauth2 = "5"
