[package]
name = "kodapa-2"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

chrono = "0.4.19"
futures-util = "0.3.17"
hyper = { version = "0.14.12", features = ["full"] }
hyper-tls = "0.5.0"
serde = { version = "1.0.130", features = ["derive"] }
serde_json = "1.0.67"
tokio = { version = "1.11.0", features = ["full"] }
twilight-cache-inmemory = "0.6.1"
twilight-gateway = "0.6.2"
twilight-http = "0.6.3"
twilight-model = "0.6.2"
url = "2.2.2"
yup-oauth2 = "5.1.0"
